--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <menu>
     <a href="#" class="active">Home</a>
     <a href="COLORS.html" target="_blank">Colors</a>
-    <a href="anyweb.html" target="_blank">Gallery</a>
+    <a href="Anyweb.html" target="_blank">Gallery</a>
     <a href="About.html" target="_blank">About</a>
     <a href="Contact.html" target="_blank">Contact</a>
   </menu>
@@ -24,15 +24,15 @@
   <p>Smile By Seeing Future</p>
 
   <div class="btn-1">
-    <a href="LOGIN.HTML" target="_blank" class="sign-in">Sign In</a>
-    <a href="LOGIN.HTML" target="_blank" class="log-in">Log In</a>
+    <a href="LOGIN.html" target="_blank" class="sign-in">Sign In</a>
+    <a href="LOGIN.html" target="_blank" class="log-in">Log In</a>
   </div>
 
 </section>
 <main>
   <div class="profile">
     <div class="nitin-1">
-      <div class="photo"><img src="image/nitin-profile.jpg" alt="Nitin Rathod">
+      <div class="photo"><img src="nitin-profile.jpg" alt="Nitin Rathod">
 
       </div>
       <div class="detail">
