--- a/index.html
+++ b/index.html
@@ -1,108 +1,133 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" type="text/css" href="nitinmedia.css">
+    <link rel="stylesheet" type="text/css" href="Home.css">
     <meta charset="utf-8">
-    <title></title>
+     <script src="https://kit.fontawesome.com/1ff8c8271d.js" crossorigin="anonymous"></script>
+     <link rel="shortcut icon" type="image/png" href="nitin_icon.png">
+    <title>Nitin Rathod Official_Home</title>
   </head>
   <body>
-<header>
-  <div class="logo">
-    <h1>Nitin</h1>
-  </div>
-  <menu>
-    <a href="#" class="active">Home</a>
-    <a href="COLORS.html" target="_blank">Colors</a>
-    <a href="Anyweb.html" target="_blank">Gallery</a>
-    <a href="About.html" target="_blank">About</a>
-    <a href="Contact.html" target="_blank">Contact</a>
-  </menu>
-</header>
-<section id="top">
-    <h3>Make Dreems Come True</h3>
-  <h2>Welcome To Nitin Official</h2>
-  <p>Smile By Seeing Future</p>
-
-  <div class="btn-1">
-    <a href="LOGIN.html" target="_blank" class="sign-in">Sign In</a>
-    <a href="LOGIN.html" target="_blank" class="log-in">Log In</a>
-  </div>
-
-</section>
-<main>
-  <div class="profile">
-    <div class="nitin-1">
-      <div class="photo"><img src="nitin-profile.jpg" alt="Nitin Rathod">
+<main id="container">
+      <header>
+      <div class="logo">
+        <img src="nitin_logo.png" alt="Nitin Rathod">
+      </div>
+      <menu>
+        <p><i class="fas fa-search"></i> Search</p> <input type="text" class="search_box" name="" value="" placeholder="Search Here">
+        <a href="#" class="active"><i class="fas fa-home"></i> Home</a>
+        <a href="#"><i class="far fa-image"></i> Gallery</a>
+        <a href="#"><i class="fas fa-file-contract"></i> About</a>
+        <a href="#"><i class="far fa-address-card"></i> Contact</a>
+      </menu>
+    </header>
+      <div class="top">
+            <h3>Make Dreems Come True</h3>
+            <h1>Welcome To Nitin Official</h1>
+            <p>Smile By Seeing Future</p>
+            <p class="Follow">You Can Follow Me On <span class=""> </span></p>
+            <div class="btn_1">
+              <a href="#" class="log_in"><i class="far fa-user"></i> Log In</a>
+              <a href="#"class="sign_up"><i class="fas fa-sign-in-alt"> </i> Sign Up</a>
+            </div>
 
       </div>
-      <div class="detail">
-        <h3>Mr. Nitin Ram Rathod</h3>
-        <p>Hello Guys My Name Is Nitin Rathod <br>
-          If You Want Basic Knowledge About Web-Designing then you can Contact <br>
-          with me on Whatsapp Number <b class="mo-no">8459556244</b> Or Join my Whatsapp group <br> <br>
-          <a href="#">Nitin Rathod Official</a>
-        </p>
+      <div class="mid">
+        <div class="profile">
 
+            <div class="photo"><img src="nitin-profile.jpg" alt="Nitin Rathod">
+            </div>
+
+            <div class="detail">
+              <h3>Mr. Nitin Ram Rathod</h3>
+              <p>Hello Guys My Name Is Nitin Rathod <br>
+                If You Want Basic Knowledge About Web-Designing then you can Contact <br>
+                with me on Whatsapp Number <b class="mo-no">8459556244</b> Or Join my Whatsapp group <br> <br>
+                <a href="#"><i class="fab fa-whatsapp"></i> Nitin Rathod Official</a>
+              </p>
+            </div>
+
+
+        </div>
+        <div class="side_bar">
+          <details open>
+          <summary><p>About That Page </p></summary>
+          <p>This Page Created By Nitin Ram Rathod <br>
+          Mr. Nitin Is Expert In HTML, CSS, JAVA-SCRIPT, PHP
+          </p>
+          </details>
+
+          <details open>
+          <summary><p>About Nitin Rathod</p></summary>
+          <p>Nitin Ram Rathod Is From Mathtanda,<br>
+          Tq. Ambad, Dist. Jalna, State: Maharashtra <br>
+          Country: India
+          </p>
+          </details>
+
+          <details open>
+          <summary><p>Contact With Nitin</p></summary>
+          <p>Mobile & Whatsapp Number <b><i class="fas fa-phone"></i> 8459556244</b><br>
+          Email Id Is <a href="mailto:rathodni3ram4967@gmail.com?subject=feedback"><i class="far fa-envelope"></i> Click To Mail Nitin</a>
+          </p>
+          </details>
+
+        </div>
+      </div>
+      <div class="Knowledge">
+        <div class="Knowledge-data">
+          <h2>About Web-Developing Languages</h2>
+          <h3>1) <i class="fab fa-html5"></i> About HTML Language</h3>
+          <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. <br>
+            It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.<br>
+            Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.<br>
+            HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.<br>
+            HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be
+            embedded into the rendered page. <br> HTML provides a means to create structured documents by denoting structural semantics for text such as headings,<br>
+            paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as <br>
+            </b> <img /> directly introduce content into the page. Other tags such as surround and provide information about <br>
+            document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page. <br>
+            HTML can embed programs written in a scripting language such as JavaScript, which affects the behavior and content of web pages. <br>
+            Inclusion of CSS defines the look and layout of content. The World Wide Web Consortium (W3C), former maintainer of the HTML and current <br>
+            maintainer of the CSS standards, has encouraged the use of CSS over explicit presentational HTML since 1997.[2]
+            </p>
+          <h3>2) <i class="fab fa-css3"></i> About CSS Language</h3>
+          <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML. <br>
+            [1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]<br>
+            CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content <br>
+            accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting <br>
+            by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.<br>
+            Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as <br>
+            on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate <br>
+            formatting if the content is accessed on a mobile device.[4]<br>
+            The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element.<br>
+             This cascading priority scheme is predictable.<br>
+            The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with<br>
+             CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.[5]<br>
+            In addition to HTML, other markup languages support the use of CSS including XHTML, plain XML, SVG, and XUL.
+          </p>
+          <h3>3) <i class="fab fa-php"></i> About PHP Language</h3>
+          <p>PHP is a popular general-purpose scripting language that is especially suited to web development.[5] It was originally created by Danish-Canadian <br>
+             programmer Rasmus Lerdorf in 1994;[6] the PHP reference implementation is now produced by The PHP Group.[7] PHP originally stood for Personal Home Page,<br>
+             [6] but it now stands for the recursive initialism PHP: Hypertext Preprocessor.[8]
+            PHP code is usually processed on a web server by a PHP interpreter implemented as a module, a daemon or as a Common Gateway Interface (CGI) executable. On a web<br>
+            <br> server, the result of the interpreted and executed PHP code – which may be any type of data, such as generated HTML or binary image data – would form the whole<br>
+             or part of a HTTP response. Various web template systems, web content management systems, and web frameworks exist which can be employed to orchestrate or facilitate<br>
+              the generation of that response. Additionally, PHP can be used for many programming tasks outside of the web context, such as standalone graphical applications[9]<br>
+               and robotic drone control.[10] Arbitrary PHP code can also be interpreted and executed via command-line interface (CLI).
+            The standard PHP interpreter, powered by the Zend Engine, is free software released under the PHP License. PHP has been widely ported and can be deployed on most web<br>
+             servers on almost every operating system and platform, free of charge.[11]
+            The PHP language evolved without a written formal specification or standard until 2014, with the original implementation acting as the de facto standard which other <br>
+            implementations aimed to follow. Since 2014, work has gone on to create a formal PHP specification.[12]
+            As of April 2020, over half of sites on the web using PHP are still on discontinued/"EOLed"[13] version 5.6 or older;[14] and with version 7.0 and 7.1 over 68%, that <br>
+            are neither officially supported by The PHP Development Team,[15] while security support is provided by third parties, such as Debian (up to June 2020 for PHP 5).[16] <br>
+            Because of the popularity of PHP that means at least 53% of the websites in the world run on implementations of languages no longer supported by their designers.<br>
+             In addition, PHP version 7.2, the most popular supported PHP version, will stop getting security updates on November 30, 2020
+          </p>
+        </div>
 
       </div>
-
-    </div>
-  </div>
-  <div class="Knowledge">
-    <div class="Knowledge-data">
-      <h2>About Web-Developing Languages</h2>
-      <h3>1) About HTML Language</h3>
-      <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. <br>
-        It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.<br>
-        Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.<br>
-        HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.<br>
-        HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be
-        embedded into the rendered page. <br> HTML provides a means to create structured documents by denoting structural semantics for text such as headings,<br>
-        paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as <br>
-        </b> <img /> directly introduce content into the page. Other tags such as surround and provide information about <br>
-        document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret the content of the page. <br>
-        HTML can embed programs written in a scripting language such as JavaScript, which affects the behavior and content of web pages. <br>
-        Inclusion of CSS defines the look and layout of content. The World Wide Web Consortium (W3C), former maintainer of the HTML and current <br>
-        maintainer of the CSS standards, has encouraged the use of CSS over explicit presentational HTML since 1997.[2]
-        </p>
-      <h3>2) About CSS Language</h3>
-      <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML. <br>
-        [1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]<br>
-        CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content <br>
-        accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting <br>
-        by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.<br>
-        Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as <br>
-        on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate <br>
-        formatting if the content is accessed on a mobile device.[4]<br>
-        The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element.<br>
-         This cascading priority scheme is predictable.<br>
-        The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with<br>
-         CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.[5]<br>
-        In addition to HTML, other markup languages support the use of CSS including XHTML, plain XML, SVG, and XUL.
-      </p>
-      <h3>3) About PHP Language</h3>
-      <p>PHP is a popular general-purpose scripting language that is especially suited to web development.[5] It was originally created by Danish-Canadian <br>
-         programmer Rasmus Lerdorf in 1994;[6] the PHP reference implementation is now produced by The PHP Group.[7] PHP originally stood for Personal Home Page,<br>
-         [6] but it now stands for the recursive initialism PHP: Hypertext Preprocessor.[8]
-        PHP code is usually processed on a web server by a PHP interpreter implemented as a module, a daemon or as a Common Gateway Interface (CGI) executable. On a web<br>
-        <br> server, the result of the interpreted and executed PHP code – which may be any type of data, such as generated HTML or binary image data – would form the whole<br>
-         or part of a HTTP response. Various web template systems, web content management systems, and web frameworks exist which can be employed to orchestrate or facilitate<br>
-          the generation of that response. Additionally, PHP can be used for many programming tasks outside of the web context, such as standalone graphical applications[9]<br>
-           and robotic drone control.[10] Arbitrary PHP code can also be interpreted and executed via command-line interface (CLI).
-        The standard PHP interpreter, powered by the Zend Engine, is free software released under the PHP License. PHP has been widely ported and can be deployed on most web<br>
-         servers on almost every operating system and platform, free of charge.[11]
-        The PHP language evolved without a written formal specification or standard until 2014, with the original implementation acting as the de facto standard which other <br>
-        implementations aimed to follow. Since 2014, work has gone on to create a formal PHP specification.[12]
-        As of April 2020, over half of sites on the web using PHP are still on discontinued/"EOLed"[13] version 5.6 or older;[14] and with version 7.0 and 7.1 over 68%, that <br>
-        are neither officially supported by The PHP Development Team,[15] while security support is provided by third parties, such as Debian (up to June 2020 for PHP 5).[16] <br>
-        Because of the popularity of PHP that means at least 53% of the websites in the world run on implementations of languages no longer supported by their designers.<br>
-         In addition, PHP version 7.2, the most popular supported PHP version, will stop getting security updates on November 30, 2020
-      </p>
-    </div>
-
-  </div>
-</main>
-  <footer><p> &copy; All Right Reserve For Nitin Rathod 2020</p></footer>
+      <footer><p><i class="far fa-copyright"></i> All Right Reserve For Nitin Rathod 2020</p> </footer>
+    </main>
   </body>
-
 </html>
