meta data changed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Meyawo Landing page | Free Bootstrap 4.3.x landing page</title>
+    <meta name="description" content="Discover Nitin Ram Rathod's web portfolio. Expert web developer from Maharashtra, India. Contact: +918459556244. Instagram: @nitinrathodofficial.">
+    <meta name="author" content="Nitin Ram Rathod">
+    <meta name="keywords" content="nitinrathodofficial, Nitin Ram Rathod, portfolio, web projects, Jalna, Rathod, Maharashtra, India, coding, design">
+    <title>Nitin Ram Rathod</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -18,7 +19,7 @@
     <!-- Page Navbar -->
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="logo" href="#">Meyawo</a>
+            <a class="logo" href="#">Nitin</a>
             <ul class="nav">
                 <li class="item">
                     <a class="link" href="#home">Home</a>
@@ -35,11 +36,11 @@
                 <li class="item">
                     <a class="link" href="#blog">Blog</a>
                 </li>
-                <li class="item">
+                <!-- <li class="item">
                     <a class="link" href="#contact">Contact</a>
-                </li>
+                </li> -->
                 <li class="item ml-md-3">
-                    <a href="components.html" class="btn btn-primary">Components</a>
+                    <a href="#contact" class="btn btn-primary">Contact</a>
                 </li>
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
@@ -56,9 +57,9 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">I am John Doe</span>
+                <span class="down">I am Nitin Rathod</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>
+            <p class="header-subtitle">FRONTEND WEB DEVELOPER</p>
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>
