meta data changed

--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Discover Nitin Ram Rathod's web portfolio. Expert web developer from Maharashtra, India. Contact: +918459556244. Instagram: @nitinrathodofficial.">
+    <meta name="description"
+        content="Discover Nitin Ram Rathod's web portfolio. Expert web developer from Maharashtra, India. Contact: +918459556244. Instagram: @nitinrathodofficial.">
     <meta name="author" content="Nitin Ram Rathod">
-    <meta name="keywords" content="nitinrathodofficial, Nitin Ram Rathod, portfolio, web projects, Jalna, Rathod, Maharashtra, India, coding, design">
-    <title>Nitin Ram Rathod</title>
+    <meta name="keywords"
+        content="nitinrathodofficial, Nitin Ram Rathod, portfolio, web projects, Jalna, Rathod, Maharashtra, India, coding, design">
+    <title>Nitin Ram Rathod - Web Developer</title>
+
+
+    <meta property="og:title" content="Nitin Ram Rathod - Web Developer">
+    <meta property="og:description"
+        content="Explore the portfolio of Nitin Ram Rathod, a skilled web developer known for expertise in React JS, Next JS, Laravel, and more. Based in Jalna District, Maharashtra, India.">
+    <meta property="og:image" content="link-to-thumbnail-image.jpg">
+    <meta property="og:url" content="https://nitinramrathod.github.io/nitinramrathod.github.io">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@nitinrathodofficial">
+    <meta name="twitter:title" content="Nitin Ram Rathod - Web Developer Portfolio">
+    <meta name="twitter:description"
+        content="Explore the portfolio of Nitin Ram Rathod, a skilled web developer known for expertise in React JS, Next JS, Laravel, and more. Based in Jalna District, Maharashtra, India.">
+    <meta name="twitter:image" content="link-to-thumbnail-image.jpg">
+
+
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -79,13 +97,14 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aliquid ad provident aut
-                        fuga animi soluta quae eos non cupiditate voluptates dolorem, doloremque quos dicta quibusdam
-                        impedit iure nemo a iste
-                        <br>culpa! Quasi quibusdam hic recusandae delectus velit officiis explicabo voluptatibus! Nemo
-                        esse similique, voluptates labore distinctio, placeat explicabo facilis molestias, blanditiis
-                        culpa iusto voluptatem ratione eligendi a, quia temporibus velit vero ipsa sint ex voluptatum
-                        expedita aliquid! Debitis, nam!
+                        Hey there, I'm Nitin Ram Rathod, a passionate web developer and fitness enthusiast. I've set up
+                        my digital roots in the beautiful Jalna District of Maharashtra, India. My coding journey has
+                        led me to specialize in front-end technologies like React JS, Next JS, Laravel, jQuery, CSS,
+                        SASS, and JavaScript. <br>
+                        Beyond the screen, I'm not just lines of code – I'm also about pushing limits. At 20, I ventured
+                        into bodybuilding, sculpting both my websites and my physique.
+                        <br> So, whether I'm crafting captivating user interfaces or hitting the gym, I'm all about the
+                        perfect blend of creativity and dedication.
                     </p>
                     <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
                 </div>
@@ -451,6 +470,119 @@
 
     <!-- Meyawo js -->
     <script src="assets/js/meyawo.js"></script>
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "FAQPage",
+          "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Who is Nitin Ram Rathod?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Nitin Ram Rathod is a skilled web developer known for his expertise in technologies like React JS, Next JS, Laravel, jQuery, CSS, SASS, and JavaScript. He's also passionate about bodybuilding and started his journey at the age of 20."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Where does Nitin Ram Rathod live?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Nitin Ram Rathod resides in the vibrant Jalna District in Maharashtra, India."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How can I contact Nitin Ram Rathod?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "You can reach out to Nitin Ram Rathod via mobile at +918459556244 or connect with him on Instagram (@nitinrathodofficial) for further inquiries."
+            }
+          },
+            {
+              "@type": "Question",
+              "name": "What technologies does Nitin Ram Rathod specialize in?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Nitin Ram Rathod is an expert in technologies like React JS, Next JS, Laravel, jQuery, CSS, SASS, and JavaScript, creating dynamic and engaging web experiences."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I see examples of Nitin Ram Rathod's web development projects?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Certainly! Visit Nitin's portfolio to explore a range of innovative web projects that showcase his skills and creativity."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Does Nitin Ram Rathod offer web development services?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, Nitin Ram Rathod provides professional web development services. Feel free to contact him for inquiries about web development projects."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How did Nitin Ram Rathod start his web development journey?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Nitin's passion for web development ignited his journey at a young age. He honed his skills and expertise through hands-on experience and continuous learning."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "What sets Nitin Ram Rathod's web development approach apart?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Nitin combines technical proficiency with creative flair, delivering user-centric web solutions that seamlessly blend functionality and aesthetics."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Is Nitin Ram Rathod available for freelance web development work?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, Nitin Ram Rathod is open to freelance web development opportunities. Contact him to discuss your project requirements."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How does Nitin Ram Rathod balance web development and bodybuilding?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Nitin believes in holistic growth. He manages his time efficiently, dedicating himself both to crafting exceptional web solutions and maintaining his passion for bodybuilding."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Can I collaborate with Nitin Ram Rathod on web projects?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Absolutely! Nitin Ram Rathod welcomes collaboration opportunities. Feel free to reach out to discuss potential collaborations."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Does Nitin Ram Rathod provide consulting for web development strategies?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Yes, Nitin Ram Rathod offers consulting services to help businesses and individuals strategize and optimize their web development projects."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "Where can I find more about Nitin Ram Rathod's creative journey?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Follow Nitin on his Instagram (@nitinrathodofficial) to get insights into his creative process, projects, and inspirations."
+              }
+            }
+          ]
+        }
+        </script>
 
 </body>
 
