meta data changed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="#contact" class="btn btn-primary">Contact</a>
                 </li>
             </ul>
-            <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
+            <a href="" id="nav-toggle" class="hamburger hamburger--elastic">
                 <div class="hamburger-box">
                     <div class="hamburger-inner"></div>
                 </div>
@@ -451,12 +451,12 @@
                     href="https://themewagon.com">ThemeWagon</a>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+                <a href="https://www.facebook.com/NitinRamRathod"  target="_blank" class="link"><i class="ti-facebook"></i></a>
+                <a href="https://twitter.com/NitinRathod173" target="_blank" class="link"><i class="ti-twitter-alt"></i></a>
+                <a href="https://www.youtube.com/@fearlessnitin4968" target="_blank" class="link"><i class="ti-youtube"></i></a>
+                <a href="https://www.instagram.com/nitinrathodofficial/" target="_blank" class="link"><i class="ti-instagram"></i></a>
+                <!-- <a href="" target="_blank" class="link"><i class="ti-pinterest-alt"></i></a>
+                <a href="" target="_blank" class="link"><i class="ti-rss"></i></a> -->
             </div>
         </footer>
     </div> <!-- end of page footer -->
