meta data changed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         content="Explore the portfolio of Nitin Ram Rathod, a skilled web developer known for expertise in React JS, Next JS, Laravel, and more. Based in Jalna District, Maharashtra, India.">
     <meta name="twitter:image" content="link-to-thumbnail-image.jpg">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/fevicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/fevicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/fevicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/fevicon/site.webmanifest">
+
 
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -90,8 +95,8 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/man.png" class="about-img"
-                        alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="assets/imgs/nitinramrathod.png" class="about-img"
+                        alt="Nitin Ram Rathod Image nitinrathodofficial NitinRathod173 rathod jalna Maharashtra india bodybuilder">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
@@ -451,10 +456,14 @@
                     href="https://themewagon.com">ThemeWagon</a>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="https://www.facebook.com/NitinRamRathod"  target="_blank" class="link"><i class="ti-facebook"></i></a>
-                <a href="https://twitter.com/NitinRathod173" target="_blank" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="https://www.youtube.com/@fearlessnitin4968" target="_blank" class="link"><i class="ti-youtube"></i></a>
-                <a href="https://www.instagram.com/nitinrathodofficial/" target="_blank" class="link"><i class="ti-instagram"></i></a>
+                <a href="https://www.facebook.com/NitinRamRathod" target="_blank" class="link"><i
+                        class="ti-facebook"></i></a>
+                <a href="https://twitter.com/NitinRathod173" target="_blank" class="link"><i
+                        class="ti-twitter-alt"></i></a>
+                <a href="https://www.youtube.com/@fearlessnitin4968" target="_blank" class="link"><i
+                        class="ti-youtube"></i></a>
+                <a href="https://www.instagram.com/nitinrathodofficial/" target="_blank" class="link"><i
+                        class="ti-instagram"></i></a>
                 <!-- <a href="" target="_blank" class="link"><i class="ti-pinterest-alt"></i></a>
                 <a href="" target="_blank" class="link"><i class="ti-rss"></i></a> -->
             </div>
