--- a/index.html
+++ b/index.html
@@ -452,8 +452,7 @@
         <footer class="footer">
             <p class="mb-0">Copyright
                 <script>document.write(new Date().getFullYear())</script> &copy; <a
-                    href="http://www.devcrud.com">DevCRUD</a> Distribution <a
-                    href="https://themewagon.com">ThemeWagon</a>
+                    href="https://www.facebook.com/NitinRamRathod">Nitin Ram Rathod</a>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://www.facebook.com/NitinRamRathod" target="_blank" class="link"><i
