meta data changed

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         content="Explore the portfolio of Nitin Ram Rathod, a skilled web developer known for expertise in React JS, Next JS, Laravel, and more. Based in Jalna District, Maharashtra, India.">
     <meta name="twitter:image" content="link-to-thumbnail-image.jpg">
 
+    <link rel="canonical" href="https://nitinramrathod.github.io/nitinramrathod.github.io">
+
     <link rel="apple-touch-icon" sizes="180x180" href="assets/fevicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/fevicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/fevicon/favicon-16x16.png">
@@ -130,7 +132,7 @@
                             <img src="assets/imgs/pencil-case.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
-                            <h6 class="title">Adipisicing</h6>
+                            <h6 class="title">Web Development</h6>
                             <p class="subtitle">Labore velit culpa adipisci excepturi consequuntur itaque in nam
                                 molestias dolorem iste quod.</p>
                         </div>
